# projectsQML

./: .gitignore  CMakeLists.txt  README.md
FirstProject/: CMakeLists.txt
FirstProject/qml/: MyButton.qml  main.qml
FourthProject/: CMakeLists.txt
FourthProject/qml/: main.qml
SecondProject/: CMakeLists.txt
SecondProject/qml/: MyButton.qml  main.qml
ThirdProject/: CMakeLists.txt
ThirdProject/qml/: main.qml
